--- a/Co-ordinator_page/Index.html
+++ b/Co-ordinator_page/Index.html
@@ -71,7 +71,8 @@
             <div class="site-background" data-aos="fade-up" data-aos-delay="100">
                 <h3>Members of</h3>
                 <h1>GAJAJYOTI COMMITTEE<br>2022</h1>
-                <button class="btn">Explore</button>
+                <button class="btn">Co-ordinator List</button>
+                <button class="btn">Event Co-ordinator</button>
             </div>
         </section>
 
@@ -102,7 +103,6 @@
                             <div class="blog-title">
                                 <h3>Cultural</h3>
                                 <a href="./commitee/cultural.html"><button class="btn btn-blog">Explore</button></a>
-                                <span>2 minutes</span>
                             </div>
                         </div>
                         <div class="blog-content" data-aos="fade-right" data-aos-delay="200">
@@ -110,7 +110,6 @@
                             <div class="blog-title">
                                 <h3>Anchoring</h3>
                                 <a href="./commitee/Anchoring.html"><button class="btn btn-blog">Explore</button></a>
-                                <span>2 minutes</span>
                             </div>
                         </div>
                         <div class="blog-content" data-aos="fade-right" data-aos-delay="200">
