--- a/Co-ordinator_page/commitee/Co-ordinator.html
+++ b/Co-ordinator_page/commitee/Co-ordinator.html
@@ -34,27 +34,7 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/rhitiq.jpeg" /></div>
-              <div class="contentBx">
-                <h3>Rhitiq Pattnaik<br /><span>200402100004@cutm.ac.in</span></h3>
-              </div>
-            </div>
-            <ul class="sci">
-              <li style="--i:1">
-                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-              </li>
-              <li style="--i:2">
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-              </li>
-              <li style="--i:3">
-                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="card">
-            <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/sarthak.jpeg" /></div>
               <div class="contentBx">
                 <h3>Sarthak Das<br /><span>181516100025@cutm.ac.in</span></h3>
               </div>
@@ -67,14 +47,54 @@
                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               </li>
               <li style="--i:3">
-                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/sarthak_das_niku/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+              </li>
+            </ul>
+          </div>
+ 
+          <div class="card">
+            <div class="content">
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/pritam.jpg" /></div>
+              <div class="contentBx">
+                <h3>Pritam Kumar Nayak<br /><span>190301121115@cutm.ac.in</span></h3>
+              </div>
+            </div>
+            <ul class="sci">
+              <li style="--i:1">
+                <a href="facebook.com/RockingPritamNayak.Sonu"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+              </li>
+              <li style="--i:2">
+                <a href="https://twitter.com/PritamKumarNay8"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+              </li>
+              <li style="--i:3">
+                <a href="https://www.instagram.com/accounts/login/?next=/pritamkumarnayak/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+              </li>
+            </ul>
+          </div>
+          
+          <div class="card">
+            <div class="content">
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/swayam.jpeg" /></div>
+              <div class="contentBx">
+                <h3>Swayam Subhajeet<br /><span>190301160014@cutm.ac.in</span></h3>
+              </div>
+            </div>
+            <ul class="sci">
+              <li style="--i:1">
+                <a href="facebook.com/RockingPritamNayak.Sonu"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+              </li>
+              <li style="--i:2">
+                <a href="https://twitter.com/PritamKumarNay8"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+              </li>
+              <li style="--i:3">
+                <a href="https://www.instagram.com/accounts/login/?next=/pritamkumarnayak/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
               </li>
             </ul>
           </div>
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/geeti.jpeg" /></div>
               <div class="contentBx">
                 <h3>Geetisudha Sahu<br /><span>200705180080@cutm.ac.in</span></h3>
               </div>
@@ -134,7 +154,7 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/Ritik.jpg" /></div>
               <div class="contentBx">
                 <h3>Ritik Rajat Behera<br /><span>191516100012@cutm.ac.in</span></h3>
               </div>
@@ -154,7 +174,7 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/phani.jpeg" /></div>
               <div class="contentBx">
                 <h3>Phani Bhusan Das<br /><span>191516100027@cutm.ac.in</span></h3>
               </div>
@@ -168,26 +188,6 @@
               </li>
               <li style="--i:3">
                 <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="card">
-            <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/pritam.jpg" /></div>
-              <div class="contentBx">
-                <h3>Pritam Kumar Nayak<br /><span>190301121115@cutm.ac.in</span></h3>
-              </div>
-            </div>
-            <ul class="sci">
-              <li style="--i:1">
-                <a href="facebook.com/RockingPritamNayak.Sonu"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-              </li>
-              <li style="--i:2">
-                <a href="https://twitter.com/PritamKumarNay8"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-              </li>
-              <li style="--i:3">
-                <a href="https://www.instagram.com/accounts/login/?next=/pritamkumarnayak/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
               </li>
             </ul>
           </div>
@@ -217,6 +217,27 @@
               <div class="imgBx"><img src="/Co-ordinator_page/assets/members/Renukanta.jpg" /></div>
               <div class="contentBx">
                 <h3>Renukant Nayak<br /><span>190704100004@cutm.ac.in</span></h3>
+              </div>
+            </div>
+            <ul class="sci">
+              <li style="--i:1">
+                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+              </li>
+              <li style="--i:2">
+                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+              </li>
+              <li style="--i:3">
+                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+              </li>
+            </ul>
+          </div>
+
+          
+          <div class="card">
+            <div class="content">
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/rhitiq.jpeg" /></div>
+              <div class="contentBx">
+                <h3>Rhitiq Pattnaik<br /><span>200402100004@cutm.ac.in</span></h3>
               </div>
             </div>
             <ul class="sci">
