--- a/Co-ordinator_page/commitee/Designing.html
+++ b/Co-ordinator_page/commitee/Designing.html
@@ -108,7 +108,7 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/sachi.jpeg" /></div>
               <div class="contentBx">
                 <h3>Sachitananda Panada<br/><span>200301130002@cutm.ac.in</span></h3>
               </div>
