--- a/Co-ordinator_page/commitee/Co-ordinator.html
+++ b/Co-ordinator_page/commitee/Co-ordinator.html
@@ -71,26 +71,6 @@
               </li>
             </ul>
           </div>
-          
-          <div class="card">
-            <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/swayam.jpeg" /></div>
-              <div class="contentBx">
-                <h3>Swayam Subhajeet<br /><span>190301160014@cutm.ac.in</span></h3>
-              </div>
-            </div>
-            <ul class="sci">
-              <li style="--i:1">
-                <a href="facebook.com/RockingPritamNayak.Sonu"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-              </li>
-              <li style="--i:2">
-                <a href="https://twitter.com/PritamKumarNay8"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-              </li>
-              <li style="--i:3">
-                <a href="https://www.instagram.com/accounts/login/?next=/pritamkumarnayak/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-              </li>
-            </ul>
-          </div>
 
           <div class="card">
             <div class="content">
@@ -216,7 +196,7 @@
             <div class="content">
               <div class="imgBx"><img src="/Co-ordinator_page/assets/members/Renukanta.jpg" /></div>
               <div class="contentBx">
-                <h3>Renukant Nayak<br /><span>190704100004@cutm.ac.in</span></h3>
+                <h3>Renukant Naik<br /><span>190704100004@cutm.ac.in</span></h3>
               </div>
             </div>
             <ul class="sci">
