--- a/Co-ordinator_page/commitee/Designing.html
+++ b/Co-ordinator_page/commitee/Designing.html
@@ -110,7 +110,7 @@
             <div class="content">
               <div class="imgBx"><img src="/Co-ordinator_page/assets/members/sachi.jpeg" /></div>
               <div class="contentBx">
-                <h3>Sachitananda Panada<br/><span>200301130002@cutm.ac.in</span></h3>
+                <h3>Sachidananda Panada<br/><span>200301130002@cutm.ac.in</span></h3>
               </div>
             </div>
             <ul class="sci">
