--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
           <a href="./about.html" class="nav-link">About</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Events</a>
+          <a href="./event.html" class="nav-link">Events</a>
         </li>
         <li class="nav-item">
           <a href="./Co-ordinator_page/Index.html" class="nav-link">Co-Ordinators</a>
@@ -44,7 +44,7 @@
 
 
   <div class="flex flex-col items-center md:m-8 max-w-full  text-white ">
-    <img src="./images/cutm-logo.png" class="w-80 mt-5" alt="">
+    <!-- <img src="./images/cutm-logo.png" class="w-80 mt-5" alt=""> -->
     <h3 class="hero-txt mt-5 text-4xl">Contact us</h3>
     <p class=" p-4 max-w-7xl text-lg  mt-4">
         <img src="./images/coordinators_poster.jpg" width="550" height="650" alt="">
